Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,44 +210,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1.Buenos Aires', '2.Toronto', '3.Pyeongchang', '4.Marakesh', '5.Albuquerque', '6.Los Cabos', '7.Greenville', '8.Archipelago Sea', '9.Walla Walla Valley', '10.Salina Island', '11.Solta', '12.Iguazu Falls']\n"
+      "['1. Buenos Aires', '2. Toronto', '3. Pyeongchang', '4. Marakesh', '5. Albuquerque', '6. Los Cabos', '7. Greenville', '8. Archipelago Sea', '9. Walla Walla Valley', '10. Salina Island', '11. Solta', '12. Iguazu Falls']\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
-    "    append_phrase = str(index+1) + \".\" + city_names[index]\n",
+    "    append_phrase = str(index+1) + \". \" + city_names[index]\n",
     "    names_and_ranks.append(append_phrase)\n",
     "print(names_and_ranks)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1, '. ', 'Buenos Aires')"
+       "'2. Toronto'"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "names_and_ranks[0] # '1. Buenos Aires'\n",
-    "#names_and_ranks[1] # '2. Toronto'\n",
+    "names_and_ranks[1] # '2. Toronto'\n",
     "#names_and_ranks[-1] # '12. Iguazu Falls'"
    ]
   },
