--- a/index.ipynb
+++ b/index.ipynb
@@ -231,16 +231,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2. Toronto'"
+       "'12. Iguazu Falls'"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
    "source": [
     "names_and_ranks[0] # '1. Buenos Aires'\n",
     "names_and_ranks[1] # '2. Toronto'\n",
-    "#names_and_ranks[-1] # '12. Iguazu Falls'"
+    "names_and_ranks[-1] # '12. Iguazu Falls'"
    ]
   },
   {
