Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -224,14 +224,13 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for index in list(range(len(city_names))):\n",
-    "    append_phrase = str(index+1) + \". \" + city_names[index]\n",
-    "    names_and_ranks.append(append_phrase)\n",
+    "    names_and_ranks.append(str(index+1) + \". \" + city_names[index])\n",
     "print(names_and_ranks)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +239,7 @@
        "'12. Iguazu Falls'"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
