--- a/index.ipynb
+++ b/index.ipynb
@@ -265,7 +265,8 @@
    },
    "outputs": [],
    "source": [
-    "city_populations = []\n"
+    "city_populations = []\n",
+    "for index in range(len(c))"
    ]
   },
   {
