Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -266,7 +266,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for index in range(len(c))"
+    "for index in range(len(cities)):\n",
+    "    "
    ]
   },
   {
