--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -223,14 +223,14 @@
    ],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
-    "for index in list(range(len(city_names))):\n",
+    "for index in range(len(city_names)):\n",
     "    names_and_ranks.append(str(index+1) + \". \" + city_names[index])\n",
     "print(names_and_ranks)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "'12. Iguazu Falls'"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
