Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -267,6 +267,7 @@
    "source": [
     "city_populations = []\n",
     "for index in range(len(cities)):\n",
+    "    city_pop\n",
     "    "
    ]
   },
