Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -267,7 +267,7 @@
    "source": [
     "city_populations = []\n",
     "for index in range(len(cities)):\n",
-    "    city_populations\n",
+    "    city_populations[index] = cities[index]\n",
     "    "
    ]
   },
