Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -277,7 +277,7 @@
    "source": [
     "city_populations = []\n",
     "for index in range(len(cities)):\n",
-    "    city_populations[index] = cities[index]['Population']\n",
+    "    city_populations.append(cities[index]['Population'])\n",
     "    \n",
     "    "
    ]
