Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -294,24 +294,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2891000"
+       "0"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "city_populations[0] # 2891000\n",
-    "#city_populations[1] # 2800000\n",
-    "#city_populations[-1] # 0"
+    "city_populations[1] # 2800000\n",
+    "city_populations[-1] # 0"
    ]
   },
   {
