Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -438,7 +438,8 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for inde"
+    "for index in range(len(cities)):\n",
+    "    city_areas.append"
    ]
   },
   {
