Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -439,7 +439,7 @@
    "source": [
     "city_areas = []\n",
     "for index in range(len(cities)):\n",
-    "    city_areas.append"
+    "    city_areas.append(cities[index]['Areas'])"
    ]
   },
   {
