--- a/index.ipynb
+++ b/index.ipynb
@@ -431,23 +431,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4758, 2731571, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59, 672]"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_areas = []\n",
     "for index in range(len(cities)):\n",
-    "    city_areas.append(cities[index]['Areas'])"
+    "    city_areas.append(cities[index]['Area'])\n",
+    "city_areas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 98,
+   "metadata": {},
    "outputs": [],
    "source": [
     "trace_areas = {'x': names_and_ranks, 'y': city_areas, 'text': names_and_ranks, 'type': 'bar', 'name': 'areas'}"
@@ -455,11 +463,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "name": "populations",
+         "text": [
+          "1. Buenos Aires",
+          "2. Toronto",
+          "3. Pyeongchang",
+          "4. Marakesh",
+          "5. Albuquerque",
+          "6. Los Cabos",
+          "7. Greenville",
+          "8. Archipelago Sea",
+          "9. Walla Walla Valley",
+          "10. Salina Island",
+          "11. Solta",
+          "12. Iguazu Falls"
+         ],
+         "type": "bar",
+         "uid": "1f00535e-caa6-11e9-a22f-3bd18a45e467",
+         "x": [
+          "1. Buenos Aires",
+          "2. Toronto",
+          "3. Pyeongchang",
+          "4. Marakesh",
+          "5. Albuquerque",
+          "6. Los Cabos",
+          "7. Greenville",
+          "8. Archipelago Sea",
+          "9. Walla Walla Valley",
+          "10. Salina Island",
+          "11. Solta",
+          "12. Iguazu Falls"
+         ],
+         "y": [
+          2891000,
+          2800000,
+          2581000,
+          928850,
+          559277,
+          287651,
+          84554,
+          60000,
+          32237,
+          4000,
+          1700,
+          0
+         ]
+        },
+        {
+         "name": "areas",
+         "text": [
+          "1. Buenos Aires",
+          "2. Toronto",
+          "3. Pyeongchang",
+          "4. Marakesh",
+          "5. Albuquerque",
+          "6. Los Cabos",
+          "7. Greenville",
+          "8. Archipelago Sea",
+          "9. Walla Walla Valley",
+          "10. Salina Island",
+          "11. Solta",
+          "12. Iguazu Falls"
+         ],
+         "type": "bar",
+         "uid": "1f005566-caa6-11e9-a22f-3bd18a45e467",
+         "x": [
+          "1. Buenos Aires",
+          "2. Toronto",
+          "3. Pyeongchang",
+          "4. Marakesh",
+          "5. Albuquerque",
+          "6. Los Cabos",
+          "7. Greenville",
+          "8. Archipelago Sea",
+          "9. Walla Walla Valley",
+          "10. Salina Island",
+          "11. Solta",
+          "12. Iguazu Falls"
+         ],
+         "y": [
+          4758,
+          2731571,
+          3194,
+          200,
+          491,
+          3750,
+          68,
+          8300,
+          33,
+          27,
+          59,
+          672
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"350a63a9-09d1-49c9-b4c0-15391ba58b58\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"350a63a9-09d1-49c9-b4c0-15391ba58b58\", [{\"name\": \"populations\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0], \"type\": \"bar\", \"uid\": \"1f068e5e-caa6-11e9-a22f-3bd18a45e467\"}, {\"name\": \"areas\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [4758, 2731571, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59, 672], \"type\": \"bar\", \"uid\": \"1f06902a-caa6-11e9-a22f-3bd18a45e467\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"350a63a9-09d1-49c9-b4c0-15391ba58b58\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"350a63a9-09d1-49c9-b4c0-15391ba58b58\", [{\"name\": \"populations\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0], \"type\": \"bar\", \"uid\": \"1f068e5e-caa6-11e9-a22f-3bd18a45e467\"}, {\"name\": \"areas\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [4758, 2731571, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59, 672], \"type\": \"bar\", \"uid\": \"1f06902a-caa6-11e9-a22f-3bd18a45e467\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly\n",
     "plotly.offline.init_notebook_mode(connected=True)\n",
